--- a/debaren-frontend/src/app/globals.css
+++ b/debaren-frontend/src/app/globals.css
@@ -24,3 +24,7 @@ body {
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
 }
+
+.ck-editor__editable {
+    min-height: 180px;
+  }
